2020/03/17:1 1. протокол описания данных готов, коды ошибок протокола еще не готовы 2. источник данных создает признаки (Pool) для модели catboost, следующий шаг -   обучение модели, анализ прогноза и остатка   грейдер, принимающий протокол и POST запрос

--- a/configurations/protocol.yaml
+++ b/configurations/protocol.yaml
@@ -4,18 +4,22 @@
 #
 # type: обязательный
 #  - 'num' - скаляр, т.е. возможно сравнение на больше-меньше
-#  - 'datetime' - дата и время, округляем до минут, но если минут нет, например, только часы, то до максимальной оставшейся точности
+#  - 'datetime' - дата и время, округляем до минут, но если минут нет, например, только часы,
+#                 то до максимальной оставшейся точности
 #  - 'string' - признак, категориальный, для которого нет метрики сравнения, например id оператора
 #  - 'Na' - not applied, не участвует (пока) в анализе, например, название улицы
 #
-# min_val: необязательный - минимально возможное значение для скаляра, если не скаляр, должен быть опущен или == 'Na'  если не определен или Na, то не проверяется
+# min_val: необязательный - минимально возможное значение для скаляра,
+#          если не скаляр, должен быть опущен или == 'Na'
+#          если не определен или Na, то не проверяется
 #  - 'Na'
 #
 # max_val: необязательный, аналогично min_val
 #
-# error: обязательный - возвращаемая ошибка сервера, содержит имя параметра, для которого вызвана, например order_id, и причину, напр. typerror
+# error: обязательный - возвращаемая ошибка сервера, содержит имя параметра, для которого вызвана,
+#                       например order_id, и причину, напр. typerror
 #
-# using: обязательный - используется для расчета модели. Это поле заполняется мной (С.Н.),
+# using: необязательный - используется для расчета модели. Это поле заполняется мной (С.Н.),
 #
 
 protocol:
